trying to fix overlapping while zooming in

--- a/client/src/components/auth/css/fancy-auth-bg.css
+++ b/client/src/components/auth/css/fancy-auth-bg.css
@@ -8,6 +8,8 @@
   );
   width: 100%;
   height: 92vh;
+  z-index: -10;
+  position: fixed;
 }
 
 .circles {
