--- a/client/src/components/auth/css/registration-form.css
+++ b/client/src/components/auth/css/registration-form.css
@@ -1,5 +1,5 @@
 #registration-form-box {
-  margin-top: -50px;
+  margin-top: -20px;
   border-radius: 25px;
   box-shadow: 0px 12px 21px 0px rgba(0,0,0,0.2);
   background: white;
